# for display continuity sake please use 2 spaces instead of tabs

2012-06-11 Giuseppe Aruta (giuseppe_aruta@yahoo.it)
  * Added code from SkyJUMP to enable color chooser plugIn

2012-05-21 mmichaud <michael.michaud@free.fr>
  * Fix a small robustness problem in the noder
  
2012-05-18 ede
  * file formats with lower case description are now capitalized so they do not get
    sorted to the end of the file format list in file chooser any more

2012-05-17 mmichaud <michael.michaud@free.fr>
  * Fix bug in Network Topology Cleaning plugin (PLUS edition) -> topology-0.3.4

2012-05-13 ede
  * bugfix 3526321 "switching L&F layout issues in OpenWizard"
    https://sourceforge.net/tracker/?func=detail&aid=3526321&group_id=118054&atid=679906

2012-05-13 mmichaud <michael.michaud@free.fr>
  * Fix bug #3526277 : create polygon from closed area sometimes displayed
    the progressbar forever

2012-05-11 mmichaud <michael.michaud@free.fr>
  * Fix bug #3521266 : create SelectRasterImageFilesPanel only once

2012-05-09 mmichaud <michael.michaud@free.fr>
  * Improved PostGIS 2.0 compatibility with ST_ prefixed functions

2012-05-08 mmichaud <michael.michaud@free.fr>
  * WMS : cache the label associated to each MapLayer in MapLayerPanel as it is
    called very often and includes a costly calculation (getFullSRSList)
  * Major update on plugin for PLUS version
    - csv-driver-0.6.0 (replaces txt driver 0.3)
  * Minor updates on plugins for PLUS version
    - aggregation-0.2.5 (make sure it is java 1.5 compatible)
    - bsheditor4jump-0.2.3 (make sure it is java 1.5 compatible)
    - dxf-driver 0.7.7 (DXF export of lines did not export z value)
    - postgis plugin 1.5.2 (add date management)
    - topology-0.3.2 (typo)

2012-05-06 ede
  - reverted AboutDialog changes by Matthias from 2012-04-22
    please find a way to include readme.txt into webstart
    also see
     http://www.mail-archive.com/jump-pilot-devel@lists.sourceforge.net/msg10867.html
     and